--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
     </header>
 
     <main>
-        <section class="image-slider">
+        <section class="top">
 
-            <div class="slide active" id="Hero">
+            <div id="Hero">
                 <img src="/Images/chicago.jpg" alt="chicago">
 
                 <div class="text-overlay">
@@ -150,5 +150,6 @@
     </footer>
 </body>
 <script src="script.js"></script>
+
 
 </html>
